<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LandingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginHorizontal="10dp"
        android:importantForAccessibility="no"
        android:src="@drawable/landing_img"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="36dp"
        android:text="@string/landing_text"
        android:textAlignment="center"
        android:fontFamily=""/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="42dp"
        android:text="@string/login_text"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/blue_semi_dark"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:text="@string/sign_up_text"
        android:textStyle="bold"
        android:paddingVertical="12dp"
        android:textColor="@color/blue_semi_dark"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/blue_semi_dark"
        app:strokeWidth="2dp"/>

</LinearLayout>