<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profileactivity"
    tools:context=".activity.profile.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_identity_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/profil_picture_text"
            android:src="@drawable/user_prof"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/userData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/user_img"
            app:layout_constraintBottom_toBottomOf="@id/user_img"
            app:layout_constraintStart_toEndOf="@id/user_img">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/username_text"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/username_email_text"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/btn_arrow"
        app:layout_constraintTop_toBottomOf="@id/profile_identity_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/setting_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/settings_text"
        android:textStyle="bold"
        android:textColor="@color/blue_dark"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/option_card_layout"
        app:strokeColor="@color/blue_semi_dark"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/setting_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<!--            <TextView-->
<!--                android:id="@+id/theme_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginTop="18dp"-->
<!--                android:layout_marginStart="14dp"-->
<!--                android:text="@string/theme_text"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="14sp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"/>-->

<!--            <Button-->
<!--                android:layout_width="102dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginEnd="14dp"-->
<!--                android:backgroundTint="@color/blue_dark"-->
<!--                android:text="System"-->
<!--                android:textSize="12sp"-->
<!--                app:layout_constraintTop_toTopOf="@id/theme_text"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/theme_text"-->
<!--                app:layout_constraintEnd_toEndOf="parent"/>-->

<!--            <ImageView-->
<!--                android:id="@+id/line_1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="18dp"-->
<!--                android:importantForAccessibility="no"-->
<!--                android:src="@drawable/line"-->
<!--                app:layout_constraintTop_toBottomOf="@id/theme_text"/>-->

<!--            <TextView-->
<!--                android:id="@+id/manage_chat_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginTop="18dp"-->
<!--                android:layout_marginStart="14dp"-->
<!--                android:text="@string/manage_chat_text"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="14sp"-->
<!--                app:layout_constraintTop_toTopOf="@id/line_1"-->
<!--                app:layout_constraintStart_toStartOf="parent"/>-->

<!--            <Button-->
<!--                android:layout_width="102dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginEnd="14dp"-->
<!--                android:backgroundTint="@color/blue_dark"-->
<!--                android:text="Manage"-->
<!--                android:textSize="12sp"-->
<!--                app:layout_constraintTop_toTopOf="@id/manage_chat_text"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/manage_chat_text"-->
<!--                app:layout_constraintEnd_toEndOf="parent"/>-->

<!--            <ImageView-->
<!--                android:id="@+id/line_2"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="18dp"-->
<!--                android:importantForAccessibility="no"-->
<!--                android:src="@drawable/line"-->
<!--                app:layout_constraintTop_toBottomOf="@id/manage_chat_text"/>-->

            <TextView
                android:id="@+id/delete_all_chat_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:layout_marginStart="14dp"
                android:text="@string/title_delete_all_chat"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/blue_dark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btn_delete_all_chat"
                android:layout_width="102dp"
                android:layout_height="40dp"
                android:layout_marginEnd="14dp"
                android:backgroundTint="@color/blue_semi_dark"
                android:text="@string/delete_all_chat_text"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="@id/delete_all_chat_text"
                app:layout_constraintBottom_toBottomOf="@id/delete_all_chat_text"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/line_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:importantForAccessibility="no"
                android:src="@drawable/line"
                app:layout_constraintTop_toBottomOf="@id/delete_all_chat_text"/>

            <TextView
                android:id="@+id/log_out_device_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="18dp"
                android:layout_marginStart="14dp"
                android:text="@string/log_out_device_text"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/blue_dark"
                app:layout_constraintTop_toBottomOf="@id/line_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btn_log_out"
                android:layout_width="102dp"
                android:layout_height="40dp"
                android:layout_marginEnd="14dp"
                android:backgroundTint="@color/blue_semi_dark"
                android:text="@string/logout_text"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="@id/log_out_device_text"
                app:layout_constraintBottom_toBottomOf="@id/log_out_device_text"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>